--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ AUTH_SECRET="0YhkqHnET3k6QDcA8gfVx8eOx85DS9JBcbtloKSIOG4="
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mysql://root:@localhost:3306/newSahara"
+DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/devSahara'
+#DATABASE_URL="mysql://root:@localhost:3306/newSahara"
 NEXTAUTH_URL="http://localhost:3000/"
 
 
