--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.20.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "14.2.7",
@@ -27,6 +28,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-photo-view": "^1.2.6",
+    "react-responsive-carousel": "^3.2.23",
+    "recharts": "^2.12.7",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.23.8"
   },
