--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 AUTH_SECRET="0YhkqHnET3k6QDcA8gfVx8eOx85DS9JBcbtloKSIOG4="
+AUTH_TRUST_HOST=true
+AUTH_URL="http://localhost:3000/"
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -9,7 +11,7 @@ AUTH_SECRET="0YhkqHnET3k6QDcA8gfVx8eOx85DS9JBcbtloKSIOG4="
 DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/devSahara'
 #DATABASE_URL="mysql://root:@localhost:3306/newSahara"
 NEXTAUTH_URL="http://localhost:3000/"
-#NEXTAUTH_URL="https://sahara-app.vercel.app/"
+#NEXTAUTH_URL="https://slice.saharabogatama.co.id/"
 
 MAIL_HOST = 'mail.saharabogatama.co.id'
 MAIL_PORT = '465'
