--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
     "react-photo-view": "^1.2.6",
     "react-responsive-carousel": "^3.2.23",
     "recharts": "^2.12.7",
