--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-input-mask": "^2.0.4",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-photo-view": "^1.2.6",
     "react-responsive-carousel": "^3.2.23",
     "recharts": "^2.12.7",
@@ -42,6 +42,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
