--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/x-data-grid": "^7.16.0",
     "@prisma/client": "^5.19.0",
     "antd": "^5.20.3",
+    "antd-mask-input": "^2.0.7",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
+    "imask": "^7.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "14.2.7",
@@ -28,7 +30,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-input-mask": "^3.0.0-alpha.2",
     "react-photo-view": "^1.2.6",
     "react-responsive-carousel": "^3.2.23",
     "recharts": "^2.12.7",
@@ -42,7 +43,6 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-input-mask": "^3.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
