--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.2",
     "@mui/x-data-grid": "^7.16.0",
+    "@mui/x-data-grid-premium": "^7.18.0",
+    "@mui/x-license": "^7.18.0",
     "@prisma/client": "^5.19.0",
     "antd": "^5.20.3",
     "antd-mask-input": "^2.0.7",
@@ -46,7 +48,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "prisma": "^5.19.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
