--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/x-data-grid-premium": "^7.18.0",
     "@mui/x-license": "^7.18.0",
     "@prisma/client": "^5.19.0",
+    "@react-pdf/renderer": "^4.0.0",
     "antd": "^5.20.3",
     "antd-mask-input": "^2.0.7",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "imask": "^7.6.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
