--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ AUTH_URL="http://localhost:3000/"
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/devSahara'
 #DATABASE_URL="mysql://root:@localhost:3306/newSahara"
-NEXTAUTH_URL="http://localhost:3000/"
-#NEXTAUTH_URL="https://slice.saharabogatama.co.id/"
+#NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_URL="https://sahara-app.vercel.app/"
 
 MAIL_HOST = 'mail.saharabogatama.co.id'
 MAIL_PORT = '465'
 MAIL_USER = 'no-reply@saharabogatama.co.id'
-MAIL_PASSWORD = 'jatiapip2024'
+MAIL_PASSWORD = 'SBIxB-Ori'
