--- a/.env
+++ b/.env
@@ -8,10 +8,10 @@ AUTH_URL="http://localhost:3000/"
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/devSahara'
-#DATABASE_URL="mysql://root:@localhost:3306/newSahara"
-#NEXTAUTH_URL="http://localhost:3000/"
-NEXTAUTH_URL="https://sahara-app.vercel.app/"
+#DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/saharadb'
+DATABASE_URL="mysql://root:@localhost:3306/newSahara"
+NEXTAUTH_URL="http://localhost:3000/"
+#NEXTAUTH_URL="https://sahara-app.vercel.app/"
 
 MAIL_HOST = 'mail.saharabogatama.co.id'
 MAIL_PORT = '465'
