--- a/.env
+++ b/.env
@@ -9,11 +9,14 @@ AUTH_URL="http://localhost:3000/"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 #DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/saharadb'
-DATABASE_URL="mysql://root:@localhost:3306/newSahara"
+DATABASE_URL='mysql://saharadb:1cO2b0lo4x@localhost/saharadb'
+#DATABASE_URL="mysql://root:@localhost:3306/newSahara"
 NEXTAUTH_URL="http://localhost:3000/"
-#NEXTAUTH_URL="https://sahara-app.vercel.app/"
+PHOTO_URL="https://slice.saharabogatama.co.id"
 
 MAIL_HOST = 'mail.saharabogatama.co.id'
 MAIL_PORT = '465'
 MAIL_USER = 'no-reply@saharabogatama.co.id'
 MAIL_PASSWORD = 'SBIxB-Ori'
+
+CREATE USER 'sahardb'@'localhost' IDENTIFIED BY 'password';
