--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 AUTH_SECRET="0YhkqHnET3k6QDcA8gfVx8eOx85DS9JBcbtloKSIOG4="
 AUTH_TRUST_HOST=true
-AUTH_URL="http://localhost:3000/"
+#AUTH_URL="http://localhost:3000/"
+AUTH_URL="https://slice.saharabogatama.co.id"
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -11,7 +12,8 @@ AUTH_URL="http://localhost:3000/"
 #DATABASE_URL='mysql://rsahara:Sahara2024@103.96.147.12/saharadb'
 DATABASE_URL='mysql://saharadb:1cO2b0lo4x@localhost/saharadb'
 #DATABASE_URL="mysql://root:@localhost:3306/newSahara"
-NEXTAUTH_URL="http://localhost:3000/"
+#NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_URL="https://slice.saharabogatama.co.id"
 PHOTO_URL="https://slice.saharabogatama.co.id"
 
 MAIL_HOST = 'mail.saharabogatama.co.id'
